maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:8: error: ')' expected but 'while' found.
       while(!estSurBiscuit())
       ^IslandMaze:10: error: ';' expected but 'if' found.
    if(etat==0)
    ^